--- a/frontend/src/css/modules/challenge-create-using-ui.scss
+++ b/frontend/src/css/modules/challenge-create-using-ui.scss
@@ -57,6 +57,12 @@
 	cursor: pointer;
 	border: 2px solid #9d9d9d;
 	border-radius: 50%;
+	text-align: center;
+	padding: 6px;
+}
+
+.cross:hover {
+	border: 2px solid #4d4d4d;
 }
 
 .cursor-pointer {
