--- a/frontend/src/css/modules/challenge-create-using-ui.scss
+++ b/frontend/src/css/modules/challenge-create-using-ui.scss
@@ -1,85 +1,82 @@
 .checkbox-field {
-	padding-bottom: 45px;
+    padding-bottom: 45px;
 }
 
 .description-circle {
-	padding-top: 100px;
-	margin-right: 3px;
+    padding-top: 100px;
+    margin-right: 3px;
 }
 
 .editor {
-	height: 150px;
+    min-height: 150px;
 }
 
 .tooltip {
-	word-wrap: keep-all;
-	max-width: 100px;
+    word-wrap: keep-all;
+    max-width: 100px;
 }
 
 .reviewScreen {
-	position: fixed;
-	background-color: white;
-	z-index: 5000;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	overflow-y: scroll;
+    position: fixed;
+    background-color: white;
+    z-index: 5000;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    overflow-y: scroll;
 }
 
 .md-tooltip {
-	width: auto;
+    width: auto;
 }
 
 .btn-floating:hover {
-	background-color: #ffaf4b !important;
+    background-color: #ffaf4b !important;
 }
 
 .btn-floating {
-	background-color: #ffaf4b !important;
+    background-color: #ffaf4b !important;
 }
 
 .add-margin-bottom {
-	margin-bottom: 40px;
+    margin-bottom: 40px;
 }
 
 .rm-padding {
-	padding: 0;
+    padding: 0;
 }
 
 .cross {
-	z-index: 6000;
-	height: 40px;
-	width: 40px;
-	position: fixed;
-	right: 10px;
-	margin-top: 7px;
-	cursor: pointer;
-	border: 2px solid #9d9d9d;
-	border-radius: 50%;
-	text-align: center;
-	padding: 6px;
+    z-index: 6000;
+    height: 40px;
+    width: 40px;
+    position: fixed;
+    right: 10px;
+    margin-top: 7px;
+    cursor: pointer;
+    border: 2px solid #9d9d9d;
+    border-radius: 50%;
+    text-align: center;
+    padding: 6px;
 }
 
 .cross:hover {
-	border: 2px solid #4d4d4d;
+    border: 2px solid #4d4d4d;
 }
 
 .cursor-pointer {
-	cursor: pointer;
+    cursor: pointer;
 }
 
-.md-button:focus {
-	background-color: white;
+.dtp>.dtp-content>.dtp-date-view>header.dtp-header {
+    background: red;
 }
 
-.dtp > .dtp-content > .dtp-date-view > header.dtp-header {
-    background: black;
-    color: #fff;
-    text-align: center;
-    padding: 3px;
-}
 
-.auto {
-	overflow: auto !important;
+.dtp div.dtp-date {
+    .dtp div.dtp-time {
+
+        background: blue;
+    }
 }
